--- a/nginx.conf
+++ b/nginx.conf
@@ -41,7 +41,8 @@ http {
 #       http2            on;
 
         listen           127.0.0.1:8001 proxy_protocol;
-        listen           127.0.0.1:8002 http2 proxy_protocol;
+        listen           127.0.0.1:8002 proxy_protocol;
+        http2            on;
 
         set_real_ip_from 127.0.0.1;
 
