--- a/nginx.conf
+++ b/nginx.conf
@@ -40,9 +40,8 @@ http {
 #       listen           127.0.0.1:8002 proxy_protocol;
 #       http2            on;
 
-        listen           127.0.0.1:8001 proxy_protocol;
-        listen           127.0.0.1:8002 proxy_protocol;
-        http2            on;
+        listen           127.0.0.1:8001 proxy_protocol http2;
+        listen           127.0.0.1:8002 proxy_protocol http2;
 
         set_real_ip_from 127.0.0.1;
 
