--- a/nginx.conf
+++ b/nginx.conf
@@ -50,7 +50,7 @@ http {
             sub_filter                         $proxy_host $host;
             sub_filter_once                    off;
 
-            set $website                       127.0.0.1:5244;
+            set $website                       cloud.nanodesu.net;
             proxy_pass                         https://$website;
             resolver 1.1.1.1;
 
